# dicom_reader

./: .gitignore  Cargo.toml  Dicom_Rust.ipynb  README.md  pixi.toml
data/tciaDownload/pat1/: 1-001.dcm  1-002.dcm  LICENSE
dicom_reader/: __init__.py
src/: data.rs  datafusion_reader.rs  dicom_data.rs  file_ops.rs  lib.rs  main.rs  polars_reader.rs  pyarrow_reader.rs  reader.rs  scan.rs
